syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";
import "google/protobuf/timestamp.proto";
import "Basic.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message SignPdfRequestStream{
  oneof request{
    Info info = 1;
    bytes certificate_file_bytes_chunk = 2;
    bytes signature_image_chunk = 3;
  }
  message Info{
    PdfDocument document = 1;
    string password = 2;
    optional google.protobuf.Timestamp signature_date = 3;
    optional string signing_contact = 4;
    optional string signing_location = 5;
    optional string signing_reason = 6;
  }
}

message GetVerifiedSignatureRequest{
  PdfDocument document = 1;
}

message GetVerifySignatureResult{
  oneof result_or_exception{
    VerifiedSignatureCollection verified_signatures = 1;
    RemoteException exception = 2;
  }
}

message VerifiedSignatureCollection{
  repeated VerifiedSignature verified_signatures = 1;
}

message VerifiedSignature{
  string signature_name = 1;
  string signing_contact = 2;
  string signing_reason = 3;
  string signing_location = 4;
  google.protobuf.Timestamp signing_date = 5;
  bool is_valid = 6;
}

message VerifyPdfSignaturesRequest{
  PdfDocument document = 1;
}